# TCC

./: CMakeLists.txt
Epilepsy/: CMakeLists.txt
Epilepsy/ImageFusion/: CMakeLists.txt  ImageFusion.py
Modules/: RegistrationMetric.py  RegistrationResearch.py
imageFusion/: CMakeLists.txt  imageFusion.py
